fix layout, section v spacing

--- a/src/Shared/styles/mixins/_layout.scss
+++ b/src/Shared/styles/mixins/_layout.scss
@@ -21,48 +21,59 @@ $container-large: space-container('large');
 }
 
 @mixin container {
-  margin: 0 map-get($container-base, 'gap') * $-unit * 1px;
+  margin-left: map-get($container-base, 'gap') * $-unit * 1px;
+  margin-right: map-get($container-base, 'gap') * $-unit * 1px;
 
   @include breakpoint-small {
-    margin: 0 map-get($container-small, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-small, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-small, 'gap') * $-unit * 1px;
   }
 
   @include breakpoint-medium {
-    margin: 0 map-get($container-medium, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-medium, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-medium, 'gap') * $-unit * 1px;
   }
 
   @include breakpoint-large {
     max-width: map-get($container-medium, 'width') * $-unit * 1px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @mixin container-wide {
-  margin: 0 map-get($container-base, 'gap') * $-unit * 1px;
+  margin-left: map-get($container-base, 'gap') * $-unit * 1px;
+  margin-right: map-get($container-base, 'gap') * $-unit * 1px;
 
   @include breakpoint-small {
-    margin: 0 map-get($container-small, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-small, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-small, 'gap') * $-unit * 1px;
   }
 
   @include breakpoint-medium {
-    margin: 0 map-get($container-medium, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-medium, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-medium, 'gap') * $-unit * 1px;
   }
 
   @include breakpoint-large {
-    margin: 0 map-get($container-large, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-large, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-large, 'gap') * $-unit * 1px;
   }
 }
 
 @mixin container-compact {
-  margin: 0 map-get($container-base, 'gap') * $-unit * 1px;
+  margin-left: map-get($container-base, 'gap') * $-unit * 1px;
+  margin-right: map-get($container-base, 'gap') * $-unit * 1px;
 
   @include breakpoint-small {
-    margin: 0 map-get($container-small, 'gap') * $-unit * 1px;
+    margin-left: map-get($container-small, 'gap') * $-unit * 1px;
+    margin-right: map-get($container-small, 'gap') * $-unit * 1px;
   }
 
   @include breakpoint-compact {
     max-width: map-get($container-compact, 'width') * $-unit * 1px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
