--- a/src/Shared/templates/BasePage.mixin.scss
+++ b/src/Shared/templates/BasePage.mixin.scss
@@ -3,6 +3,10 @@
 
 @mixin base-page {
   section {
+    margin-bottom: gap('huge');
+  }
+
+  > section:first-of-type {
     padding-top: gap('huge');
   }
 
