--- a/src/Taxonomy/groups/TagItem/TagItem.scss
+++ b/src/Taxonomy/groups/TagItem/TagItem.scss
@@ -10,16 +10,19 @@
 
     header {
       display: flex;
-      align-items: center;
+      align-items: baseline;
       margin-bottom: gap('medium');
     }
 
     .page-title {
+      @include text-truncate;
+      white-space: pre-wrap;
       margin: 0;
     }
   }
 
   .tag-count {
     font-size: responsive-type-size('h2');
+    flex-shrink: 0;
   }
 }
